--- a/content/demo.ipynb
+++ b/content/demo.ipynb
@@ -239,7 +239,7 @@
     "def f(x):\n",
     "    return x**2\n",
     "\n",
-    "print(sumaInferior(f, 0, 2, 20))"
+    "#print(sumaInferior(f, 0, 2, 20))"
    ]
   },
   {
@@ -341,7 +341,7 @@
     "\n",
     "    print(f\"\\nLa suma inferior de Riemann es: {inferior}\")\n",
     "\n",
-    "main()"
+    "#main()"
    ]
   },
   {
@@ -573,7 +573,7 @@
     "def f(x):\n",
     "    return x**2\n",
     "\n",
-    "print(sumaSuperior(f, 0, 2, 20))"
+    "#print(sumaSuperior(f, 0, 2, 20))"
    ]
   },
   {
@@ -673,7 +673,7 @@
     "\n",
     "    print(f\"\\nLa suma superior de Riemann es: {inferior}\")\n",
     "\n",
-    "main()"
+    "#main()"
    ]
   },
   {
@@ -990,7 +990,7 @@
     "    print(\"\\nSuma inferior y superior por número de rectángulos:\\n\")\n",
     "    SumaSupSumaInf(funcion, minimo, maximo, eps)\n",
     "\n",
-    "main()"
+    "#main()"
    ]
   },
   {
