--- a/content/demo.ipynb
+++ b/content/demo.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Dependencias**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "hjZfl_V3wbfh",
+    "outputId": "f718788d-a117-44ec-e7df-1ecf37b1f7b9"
+   },
+   "outputs": [],
+   "source": [
+    "!pip install dash\n",
+    "!pip install dash_bootstrap_components\n",
+    "!pip install pandas\n",
+    "!pip install gdown"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -107,10 +132,7 @@
     "\n",
     "<p align=\"center\">\n",
     "   <img src=\"suma_superior.gif\" width=\"400\">\n",
-    "</p>\n",
-    "\n",
-    "\n",
-    "\n"
+    "</p>"
    ]
   },
   {
@@ -448,23 +470,6 @@
     "\n",
     "Para esto debemos indicar a a la VM de Google Colab que instale los requerimientos. Mediante pip, pero como estamos en Jupyter Notebook los comandos se introducen con un signo de exclamación al inicio, en nuestra\n",
     "PC si no utilizamos Jupyter, esa exclamación no va.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "hjZfl_V3wbfh",
-    "outputId": "f718788d-a117-44ec-e7df-1ecf37b1f7b9"
-   },
-   "outputs": [],
-   "source": [
-    "#!pip install dash\n",
-    "#!pip install dash_bootstrap_components\n",
-    "#!pip install pandas\n"
    ]
   },
   {
