--- a/content/demo.ipynb
+++ b/content/demo.ipynb
@@ -1097,7 +1097,8 @@
     "            print(f\"\\n→ Con N = {N}, la diferencia {diferencia:.6f} < ε = {eps}\")\n",
     "            break\n",
     "        N += 1 # Evalua para N y en esta linea le suma 1, para que en la siguiente iteración N=2 y asi sucesivamente hasta romper el bucle\n",
-    "    return data # Nueva línea, ahora guardamos datos que queremos en la tabla, asi que la función debe devolverlo"
+    "    return data # Nueva línea, ahora guardamos datos que queremos en la tabla, asi que la función debe devolverlo\n",
+    "    "
    ]
   },
   {
@@ -1146,6 +1147,46 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=0) # Levantar web server para ejecutar la app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Version lite:\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "from IPython.display import HTML, display\n",
+    "\n",
+    "# ---- función del usuario ----\n",
+    "def f(x):\n",
+    "    return x**2\n",
+    "\n",
+    "def SumaSupSumaInf(f, a, b, dx):\n",
+    "    xs = []\n",
+    "    ys = []\n",
+    "    while a <= b:\n",
+    "        xs.append(a)\n",
+    "        ys.append(f(a))\n",
+    "        a = round(a + dx, 10)  # evitar errores de punto flotante\n",
+    "    return {\"x\": xs, \"f(x)\": ys}\n",
+    "\n",
+    "# ---- generar datos ----\n",
+    "datitos = SumaSupSumaInf(f, 0, 2, 0.1)\n",
+    "datos = pd.DataFrame(datitos)\n",
+    "\n",
+    "# ---- incluir bootstrap ----\n",
+    "display(HTML(\"\"\"\n",
+    "<link\n",
+    "  rel=\"stylesheet\"\n",
+    "  href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css\"\n",
+    "/>\n",
+    "\"\"\"))\n",
+    "\n",
+    "# ---- mostrar tabla estilo bootstrap (igual que dash) ----\n",
+    "display(HTML(datos.to_html(classes=\"table table-striped table-hover table-bordered\")))\n"
    ]
   },
   {
@@ -1207,6 +1248,74 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    app.run(port=\"8100\", debug=False) # Levantar web server para ejecutar la app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# version lite:\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# ---- Usamos tu función ----\n",
+    "def f(x):\n",
+    "    return x**2\n",
+    "\n",
+    "datitos = SumaSupSumaInf(f, 0, 2, 0.1)\n",
+    "datos = pd.DataFrame(datitos)\n",
+    "\n",
+    "# ---- Extraemos columnas ----\n",
+    "val_x = datos[\"Rectángulos\"]\n",
+    "val_y_inf = datos[\"Suma Inferior\"]\n",
+    "val_y_sup = datos[\"Suma Superior\"]\n",
+    "val_y_int = datos[\"Integral\"]\n",
+    "\n",
+    "# ---- Colores igual que en tu código Dash ----\n",
+    "colores = [\"blue\"] * (len(val_x) - 1) + [\"orange\"]\n",
+    "\n",
+    "# ---- Gráfico Plotly (sin Dash) ----\n",
+    "trazo = go.Figure()\n",
+    "\n",
+    "# Suma Inferior\n",
+    "trazo.add_trace(go.Scatter(\n",
+    "    x=val_x,\n",
+    "    y=val_y_inf,\n",
+    "    mode=\"lines+markers\",\n",
+    "    marker=dict(color=colores, size=8),\n",
+    "    name=\"Suma inferior\"\n",
+    "))\n",
+    "\n",
+    "# Integral\n",
+    "trazo.add_trace(go.Scatter(\n",
+    "    x=val_x,\n",
+    "    y=val_y_int,\n",
+    "    mode=\"lines+markers\",\n",
+    "    marker=dict(color=\"red\", size=8),\n",
+    "    name=\"Integral\"\n",
+    "))\n",
+    "\n",
+    "# Suma Superior\n",
+    "trazo.add_trace(go.Scatter(\n",
+    "    x=val_x,\n",
+    "    y=val_y_sup,\n",
+    "    mode=\"lines+markers\",\n",
+    "    marker=dict(color=\"green\", size=8),\n",
+    "    name=\"Suma superior\"\n",
+    "))\n",
+    "\n",
+    "# ---- Maquillaje igual que tu versión ----\n",
+    "trazo.update_layout(\n",
+    "    title=\"Convergencia de las Sumas de Riemann\",\n",
+    "    xaxis_title=\"Número de rectángulos (N)\",\n",
+    "    yaxis_title=\"Suma\",\n",
+    "    legend_title=\"Gráficas\",\n",
+    "    template=\"plotly_dark\"\n",
+    ")\n",
+    "\n",
+    "trazo.show()\n"
    ]
   },
   {
