--- a/content/test.ipynb
+++ b/content/test.ipynb
@@ -1,13 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "938b8cc7-1076-4c19-8b54-f47e240f280a",
+   "metadata": {},
+   "source": [
+    "# No sé, no me acuerdo:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619c1cc1",
+   "id": "a390b599-fc97-402e-a645-043f8fe56120",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import bqplot as bq\n",
@@ -74,11 +81,37 @@
     "    legend_location='top-left'\n",
     ")\n",
     "\n",
-    "fig\n"
+    "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "735c06eb-5873-4aed-a804-d3477740d4b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
