--- a/content/test.ipynb
+++ b/content/test.ipynb
@@ -5,7 +5,7 @@
    "id": "938b8cc7-1076-4c19-8b54-f47e240f280a",
    "metadata": {},
    "source": [
-    "# No sé, no me acuerdo:"
+    "# Suma Superior e Inferior de Riemann"
    ]
   },
   {
@@ -23,26 +23,50 @@
     "def f(x):\n",
     "    return x**2\n",
     "\n",
-    "# Reemplaza esta función con tu implementación real\n",
     "def SumaSupSumaInf(f, a, b, paso):\n",
-    "    xs = np.arange(a, b+paso, paso)\n",
-    "    sup = [sum(f(x + paso) for x in xs[:-1])]\n",
-    "    inf = [sum(f(x) for x in xs[:-1])]\n",
-    "    integral = [sum(f(x + paso/2) for x in xs[:-1])]\n",
-    "    return {\n",
-    "        \"Rectángulos\": list(range(1, len(xs))),\n",
-    "        \"Suma Inferior\": inf * (len(xs)-1),\n",
-    "        \"Suma Superior\": sup * (len(xs)-1),\n",
-    "        \"Integral\": integral * (len(xs)-1)\n",
-    "    }\n",
+    "    xs = np.arange(a, b + paso, paso)\n",
+    "    N_vals = []\n",
+    "    suma_inf_vals = []\n",
+    "    suma_sup_vals = []\n",
+    "    integral_vals = []\n",
     "\n",
-    "datitos = SumaSupSumaInf(f, 0, 2, 0.1)\n",
-    "datos = pd.DataFrame(datitos)\n",
+    "    for i in range(1, len(xs)):\n",
+    "        N = i\n",
+    "        x_sub = np.linspace(a, b, N+1)\n",
+    "        dx = x_sub[1] - x_sub[0]\n",
+    "\n",
+    "        # Suma inferior (usa mínimos del intervalo)\n",
+    "        inf = sum(min(f(x_sub[j]), f(x_sub[j+1])) for j in range(N)) * dx\n",
+    "        \n",
+    "        # Suma superior (máximos)\n",
+    "        sup = sum(max(f(x_sub[j]), f(x_sub[j+1])) for j in range(N)) * dx\n",
+    "        \n",
+    "        # Aproximación integral (punto medio)\n",
+    "        mids = (x_sub[:-1] + x_sub[1:]) / 2\n",
+    "        integral = sum(f(m) for m in mids) * dx\n",
+    "        \n",
+    "        N_vals.append(N)\n",
+    "        suma_inf_vals.append(inf)\n",
+    "        suma_sup_vals.append(sup)\n",
+    "        integral_vals.append(integral)\n",
+    "\n",
+    "    return pd.DataFrame({\n",
+    "        \"Rectángulos\": N_vals,\n",
+    "        \"Suma Inferior\": suma_inf_vals,\n",
+    "        \"Suma Superior\": suma_sup_vals,\n",
+    "        \"Integral\": integral_vals\n",
+    "    })\n",
+    "\n",
+    "# ---------------- DATOS ----------------\n",
+    "\n",
+    "datos = SumaSupSumaInf(f, 0, 2, 0.1)\n",
     "\n",
     "val_x = datos[\"Rectángulos\"]\n",
     "val_y_inf = datos[\"Suma Inferior\"]\n",
     "val_y_sup = datos[\"Suma Superior\"]\n",
     "val_y_int = datos[\"Integral\"]\n",
+    "\n",
+    "# ---------------- GRAFICO BQPLOT ----------------\n",
     "\n",
     "x_sc = bq.LinearScale()\n",
     "y_sc = bq.LinearScale()\n",
@@ -51,7 +75,7 @@
     "    x=val_x, y=val_y_inf,\n",
     "    scales={'x': x_sc, 'y': y_sc},\n",
     "    colors=[\"blue\"], stroke_width=2,\n",
-    "    markers=True, marker_size=64,\n",
+    "    markers=True, marker_size=32,\n",
     "    labels=[\"Suma inferior\"]\n",
     ")\n",
     "\n",
@@ -59,15 +83,15 @@
     "    x=val_x, y=val_y_int,\n",
     "    scales={'x': x_sc, 'y': y_sc},\n",
     "    colors=[\"red\"], stroke_width=2,\n",
-    "    markers=True, marker_size=64,\n",
-    "    labels=[\"Integral\"]\n",
+    "    markers=True, marker_size=32,\n",
+    "    labels=[\"Integral aprox.\"]\n",
     ")\n",
     "\n",
     "line_sup = bq.Lines(\n",
     "    x=val_x, y=val_y_sup,\n",
     "    scales={'x': x_sc, 'y': y_sc},\n",
     "    colors=[\"green\"], stroke_width=2,\n",
-    "    markers=True, marker_size=64,\n",
+    "    markers=True, marker_size=32,\n",
     "    labels=[\"Suma superior\"]\n",
     ")\n",
     "\n",
@@ -81,7 +105,7 @@
     "    legend_location='top-left'\n",
     ")\n",
     "\n",
-    "fig"
+    "fig\n"
    ]
   },
   {
